Extracting buttonbar, and replacing it with template include Fixing layout problem on contact page.

--- a/css/sass/partials/_basic_structure.scss
+++ b/css/sass/partials/_basic_structure.scss
@@ -11,6 +11,14 @@ html, body {
   padding: 30px 0 20px;
 }
 
+.margin-top-m {
+  margin-top: 1.5em;  
+}
+
+.margin-bottom-md {
+  margin-bottom: 1em;
+}
+
 .main article h1 {
   font-size: 2em;
 }
